Changelog
=========

1.1.5 (unreleased)
------------------

- Nothing changed yet.


1.1.4 (2015-02-04)
------------------

- Bypass session reset in collective.z3cform.wizard if HTTP referer is not 
  equal to the actual url which can be the case when the site is accessed
  through a reverse proxy with url rewriting (e.g. MS ISA-Proxy).
  [buchi]


1.1.3 (2012-10-18)
------------------

- Fixed supplier mail to include the ordered shop items when multiple
  email addresses are given.
  [buchi]


1.1.2 (2012-09-27)
------------------

- Allow multiple email addresses for supplier seperated by comma.
  [Julian Infanger]


1.1.1 (2012-09-24)
------------------

- Do not raise an AssertionError if the objects type is not ShopItem.
  [Julian Infanger]


1.1 (2011-12-27)
----------------

- Made ShopItem inherit from ATCTContent instead of ATDocument.

- Avoid creating a session if there doesn't exist one yet.
  Accessing REQUEST.SESSION causes a _ZopeID cookie to be created, therefore
  we use the browser_id_manager to check first if a session already exists.

- Removed language specific subjects for order mails from settings and handle
  translation with i18n.


1.0 (2011-02-25)
----------------

- Initial release.